# dotclaude

./: .gitignore  .overcommit.yml  CLAUDE.md  LICENSE  README.md  config.json
docs/: managing-skills.md
home/: CLAUDE.md
licenses/superpowers/: README.md
skills/bitbucket-pull-requests/: SKILL.md  bitbucket_api.py
skills/conventional-commit/: SKILL.md
skills/conventional-commit/references/: spec.md
skills/converge/: .gitignore  SKILL.md  agent_cli.py  parser.py  prompt.py  pyproject.toml  seed.py  server.py  state.py  transcript.py  watch.py
skills/converge/commands/: converge-end.md  converge-start.md  converge-status.md
skills/converge/tests/: conftest.py  test_agent_cli.py  test_parser.py  test_prompt.py  test_seed.py  test_server.py  test_state.py  test_transcript.py  test_watch.py
skills/jina-reader/: SKILL.md
skills/jina-reader/references/: api.md
skills/jina-reader/scripts/: jina.py
